<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:fontFamily="@font/aclonica"
        android:padding="18sp"
        android:text="@string/welcome_to_ALC"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/welcome_text_view"/>

    <Button
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_design"
        android:fontFamily="@font/aclonica"
        android:id="@+id/about_ALC"
        android:text="@string/about_ALC"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_design"
        android:fontFamily="@font/aclonica"
        android:text="@string/my_profile"
        android:textAlignment="center"
        android:id="@+id/my_profile"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>



